--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,10 @@
     // Some stricter flags
     "noUnusedLocals": false,
     "noUnusedParameters": true,
-    "noPropertyAccessFromIndexSignature": true
+    "noPropertyAccessFromIndexSignature": true,
+    "paths": {
+      "@/shared/*": ["./shared/*"],
+      "@/*": ["./server/*"]
+    }
   }
 }
