--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "clsx": "^2.1.1",
     "hono": "^4.7.4",
     "lucide-react": "^0.477.0",
+    "motion": "^12.4.10",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
