Changes to be committed: 	modified:   frontend/package-lock.json 	modified:   frontend/src/App.tsx 	new file:   frontend/src/api/api.ts 	modified:   frontend/src/components/Header.tsx 	new file:   frontend/src/components/pages/NewsPage.tsx 	modified:   frontend/src/components/pages/SignIn.tsx 	modified:   frontend/src/components/pages/SignUp.tsx 	new file:   frontend/src/hooks/useAuth.ts 	deleted:    frontend/src/lib/api.ts 	modified:   frontend/src/main.tsx 	modified:   frontend/tsconfig.node.json 	modified:   server/routes/auth-router.ts 	modified:   shared/types.ts

--- a/frontend/tsconfig.node.json
+++ b/frontend/tsconfig.node.json
@@ -7,14 +7,14 @@
     "skipLibCheck": true,
 
     "baseUrl": ".",
-    "paths": {
-      "@/*": [
-        "./src/*"
-      ],
-      "@/shared/*": [
-        "../shared/*"
-      ]
-    },
+    // "paths": {
+    //   "@/*": [
+    //     "./src/*"
+    //   ],
+    //   "@/shared/*": [
+    //     "../shared/*"
+    //   ]
+    // },
 
     /* Bundler mode */
     "moduleResolution": "bundler",
