--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lucia": "^3.2.2",
     "pg": "^8.13.3",
     "postgres": "^3.4.5",
+    "random-avatar-generator": "^2.0.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
