--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -7,15 +7,10 @@
     "module": "ESNext",
     "skipLibCheck": true,
 
-
     "baseUrl": ".",
     "paths": {
-      "@/*": [
-        "./src/*"
-      ],
-      "@/shared/*": [
-        "../shared/*"
-      ]
+      "@/*": ["./src/*"],
+      "@/shared/*": ["../shared/*"]
     },
     /* Bundler mode */
     "moduleResolution": "bundler",
@@ -27,8 +22,8 @@
 
     /* Linting */
     "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
