--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -11,12 +11,8 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@/*": [
-        "./src/*"
-      ],
-      "@/shared/*": [
-        "../shared/*"
-      ]
+      "@/*": ["./src/*"],
+      "@/shared/*": ["../shared/*"]
     }
   }
 }
