--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
   "dependencies": {
     "@hono/zod-validator": "^0.4.3",
     "@lucia-auth/adapter-drizzle": "^1.1.0",
-    "drizzle-orm": "^0.39.3",
+    "@neondatabase/serverless": "^1.0.0",
+    "@types/nodemailer": "^6.4.17",
+    "drizzle-orm": "^0.42.0",
     "drizzle-zod": "^0.7.0",
-    "hono": "^4.7.4",
+    "hono": "^4.7.7",
     "lucia": "^3.2.2",
+    "nodemailer": "^6.10.1",
     "pg": "^8.13.3",
     "postgres": "^3.4.5",
     "random-avatar-generator": "^2.0.0",
+    "resend": "^4.3.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
