--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "module": "ESNext",
     "moduleDetection": "force",
     "jsx": "react-jsx",
+      // "jsxImportSource": "hono/jsx",
     "allowJs": true,
 
     // Bundler mode
@@ -25,7 +26,7 @@
     "noPropertyAccessFromIndexSignature": true,
     "paths": {
       "@/shared/*": ["./shared/*"],
-      "@/*": ["./server/*"]
+      // "@/*": ["./server/*"]
     }
   }
 }
