--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
     "react-hook-form": "^7.56.0",
     "react-hot-toast": "^2.5.2",
     "react-intersection-observer": "^9.16.0",
+    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.15",
     "tailwindcss-animate": "^1.0.7",
