--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "db:push": "drizzle-kit push"
   },
   "dependencies": {
+    "@hono/node-server": "^1.14.1",
     "@hono/zod-validator": "^0.4.3",
     "@lucia-auth/adapter-drizzle": "^1.1.0",
     "@neondatabase/serverless": "^1.0.0",
@@ -26,6 +27,7 @@
     "pg": "^8.13.3",
     "postgres": "^3.4.5",
     "random-avatar-generator": "^2.0.0",
+    "socket.io": "^4.8.1",
     "zod": "^3.24.2"
   },
   "devDependencies": {
