--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "@hono/node-server": "^1.14.1",
     "@hono/zod-validator": "^0.4.3",
     "@lucia-auth/adapter-drizzle": "^1.1.0",
-    "@neondatabase/serverless": "^1.0.0",
+    "@neondatabase/serverless": "^1.0.1",
     "@react-email/components": "0.0.36",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/nodemailer": "^6.4.17",
     "dotenv": "^16.5.0",
-    "drizzle-orm": "^0.42.0",
+    "drizzle-orm": "^0.44.2",
     "drizzle-zod": "^0.7.0",
     "hono": "4.7.7",
     "jsonwebtoken": "^9.0.2",
@@ -37,9 +37,10 @@
     "@types/pg": "^8.11.11",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
-    "drizzle-kit": "^0.30.4",
+    "drizzle-kit": "^0.31.2",
     "prettier": "^3.5.2",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "react-email": "4.0.7"
+    "react-email": "4.0.7",
+    "tsx": "^4.20.3"
   }
 }
