--- a/fly.toml
+++ b/fly.toml
@@ -24,7 +24,7 @@ primary_region = 'ams'
 
 [[env]]
 PORT = "3000"
-DATABASE_URL = "postgres://postgres:v0TXiKbeo3LREC3@good-news-db.flycast:5432"
+DATABASE_URL="postgresql://neondb_owner:npg_7nUrBFx0RQAO@ep-weathered-violet-a2l1xcgo-pooler.eu-central-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require"
 BREVO_USERNAME="8a9cd7001@smtp-brevo.com"
 BREVO_PASS="JmO7EKrFj9HUfWan"
 JWT_SECRET="v0TXiKbeo3LREC3"
