--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,7 +31,7 @@
     "date-fns": "^4.1.0",
     "hono": "^4.7.7",
     "lucide-react": "^0.477.0",
-    "motion": "^12.23.3",
+    "motion": "^12.23.5",
     "query-string": "^9.1.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -43,6 +43,7 @@
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.15",
     "tailwindcss-animate": "^1.0.7",
+    "usehooks-ts": "^3.1.1",
     "zod": "^3.24.2",
     "zustand": "^5.0.4"
   },
