--- a/fly.toml
+++ b/fly.toml
@@ -1,10 +1,10 @@
-# fly.toml app configuration file generated for good-news-app on 2025-04-08T15:36:01+03:00
+# fly.toml app configuration file generated for magick-world on 2025-07-24T14:16:21Z
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = 'good-news-app'
-primary_region = 'ams'
+app = 'magick-world'
+primary_region = 'waw'
 
 [build]
 
@@ -20,12 +20,4 @@ primary_region = 'ams'
   memory = '1gb'
   cpu_kind = 'shared'
   cpus = 1
-
-
-[[env]]
-PORT = "3000"
-DATABASE_URL="postgresql://neondb_owner:npg_7nUrBFx0RQAO@ep-weathered-violet-a2l1xcgo-pooler.eu-central-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require"
-BREVO_USERNAME="8a9cd7001@smtp-brevo.com"
-BREVO_PASS="JmO7EKrFj9HUfWan"
-JWT_SECRET="v0TXiKbeo3LREC3"
-BASE_URL_FRONT="good-news.space"
+  memory_mb = 1024
