--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "db:push": "drizzle-kit push"
   },
   "dependencies": {
-    "@hono/node-server": "^1.15.0",
+    "@hono/node-server": "^1.18.0",
     "@hono/zod-validator": "^0.4.3",
     "@lucia-auth/adapter-drizzle": "^1.1.0",
     "@neondatabase/serverless": "^1.0.1",
     "@react-email/components": "0.0.36",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/nodemailer": "^6.4.17",
+    "@upstash/redis": "^1.35.3",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.44.2",
     "drizzle-zod": "^0.7.0",
