feat: add action cancel hook and state schema
- Implemented `useActionCancel` hook for canceling hero actions in the frontend.
- Created `state` schema with enum types and relations to manage hero states in the database.
- Integrated Upstash Redis for handling hero action queues and socket events for action completion notifications.

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/nodemailer": "^6.4.17",
     "@upstash/redis": "^1.35.3",
+    "bullmq": "^5.56.9",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.44.2",
     "drizzle-zod": "^0.7.0",
