--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "@types/nodemailer": "^6.4.17",
     "@upstash/redis": "^1.35.3",
     "bullmq": "^5.56.9",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.44.2",
     "drizzle-zod": "^0.7.0",
     "hono": "4.7.7",
+    "ioredis": "^5.7.0",
     "jsonwebtoken": "^9.0.2",
     "lucia": "^3.2.2",
     "nodemailer": "^6.10.1",
