new file:   drizzle/0036_flowery_captain_america.sql 	new file:   drizzle/0037_low_loa.sql 	new file:   drizzle/0038_smooth_masque.sql 	new file:   drizzle/0039_nervous_kabuki.sql 	new file:   drizzle/meta/0036_snapshot.json 	new file:   drizzle/meta/0037_snapshot.json 	new file:   drizzle/meta/0038_snapshot.json 	new file:   drizzle/meta/0039_snapshot.json 	modified:   drizzle/meta/_journal.json 	new file:   frontend/public/sprites/buildings/leave-town.png 	modified:   frontend/src/components/TownBuilding.tsx 	new file:   frontend/src/features/hero/components/CharacterPaperdoll.tsx 	new file:   frontend/src/features/hero/components/CharacterPaperdollButton.tsx 	modified:   frontend/src/features/hero/components/GameHeader.tsx 	new file:   frontend/src/features/hero/hooks/useLocationChange.ts 	new file:   frontend/src/features/hero/hooks/useStateChange.ts 	renamed:    frontend/src/features/hero/hooks/useWalkTownCompleteListener.tsx -> frontend/src/features/hero/hooks/useWalkTownCompleteListener.ts 	new file:   frontend/src/features/map/api/get-map.ts 	new file:   frontend/src/features/map/components/Map.tsx 	modified:   frontend/src/routes/game/index.tsx 	modified:   package.json 	modified:   server/db/schema/hero-schema.ts 	modified:   server/db/schema/index.ts 	modified:   server/db/schema/location-schema.ts 	new file:   server/db/schema/map-schema.ts 	new file:   server/db/schema/tile-schema.ts 	modified:   server/index.ts 	new file:   server/json/raven 32x32.png 	new file:   server/json/solmer.json 	new file:   server/lib/buildingMapData.ts 	deleted:    server/lib/constants.ts 	modified:   server/lib/utils.ts 	modified:   server/queue/actionQueueListeners.ts 	modified:   server/routes/hero-router.ts 	new file:   server/routes/map-router.ts 	new file:   shared/json-types.ts 	modified:   shared/types.ts

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "backend",
   "scripts": {
-    "dev": "bun run --hot  server/index.ts",
+    "dev": "bun run server/index.ts",
     "start": "bun server/index.ts",
     "format:write": "prettier . --write",
     "db:studio": "drizzle-kit studio",
