--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "db:studio": "drizzle-kit studio",
     "db:migrate": "drizzle-kit migrate",
     "db:generate": "drizzle-kit generate",
-    "db:push": "drizzle-kit push"
+    "db:push": "drizzle-kit push",
+    "db:reset": "bun run server/db/reset.ts"
   },
   "dependencies": {
     "@hono/node-server": "^1.18.0",
