--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "@tanstack/react-query": "^5.67.1",
     "@tanstack/react-query-devtools": "^5.67.1",
     "@tanstack/react-router": "^1.130.2",
+    "@tanstack/react-virtual": "^3.13.12",
     "@tanstack/zod-adapter": "^1.114.34",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
