--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
+    "@pixi/react": "^8.0.3",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-label": "^2.1.2",
@@ -32,6 +33,8 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.477.0",
     "motion": "^12.23.5",
+    "pixi-viewport": "^6.0.3",
+    "pixi.js": "^8.2.6",
     "query-string": "^9.1.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
