Refactor equipment and inventory components; update potion and buff schemas
- Removed unused imports from Equipment and Inventory components.
- Updated Equipment component to temporarily display placeholder elements instead of GameItemCard.
- Changed terminology in Modifier component for clarity (e.g., 'armor' to 'defense').
- Modified package.json to reflect new project name and version.
- Revised buff schema to include JSONB modifier and adjusted buff type enum.
- Updated equipment schema to standardize heroId field naming.
- Expanded game item schema to include new weapon, armor, accessory, and potion tables with appropriate relationships.
- Refactored modifier schema to consolidate and rename fields for consistency.
- Enhanced potion entity creation logic to align with new schema structure.
- Adjusted hero router to accommodate new game item relationships and potion handling.
- Cleaned up shop router to remove unnecessary modifier fetching.
- Updated seed creation logic to properly insert potions into the database.
- Revised shared types to include new potion and accessory types for better type safety.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "backend",
+  "name": "magic-world",
+  "version": "0.2",
   "scripts": {
     "dev": "bun run --hot server/index.ts",
     "start": "bun server/index.ts",
