Refactor map and town functionality to place structure
- Updated map-router to replace towns with places in data fetching.
- Removed town-router as towns are now integrated into places.
- Modified seed scripts to create places instead of towns and buildings.
- Introduced place schema and entities to support new place structure.
- Updated job types and socket data types to reflect place terminology.
- Created new frontend components and hooks for place interactions.
- Implemented place API routes for fetching place details and heroes.
- Updated existing components to utilize the new place structure.

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@lucia-auth/adapter-drizzle": "^1.1.0",
     "@neondatabase/serverless": "^1.0.1",
     "@react-email/components": "0.0.36",
+    "@socket.io/redis-adapter": "^8.3.0",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/nodemailer": "^6.4.17",
     "@upstash/redis": "^1.35.3",
