feat: update crafting system with new queue management; enhance components and types for improved functionality and resource handling

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,8 +37,8 @@
     "pixi-viewport": "^6.0.3",
     "pixi.js": "^8.2.6",
     "query-string": "^9.1.1",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "react-error-boundary": "^5.0.0",
     "react-hook-form": "^7.56.0",
     "react-hot-toast": "^2.5.2",
@@ -56,8 +56,8 @@
     "@tanstack/react-router-devtools": "^1.114.31",
     "@tanstack/router-plugin": "^1.114.31",
     "@types/node": "^22.13.9",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
     "@vitejs/plugin-react": "^4.4.1",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
