Refactor: Update item movement and add maintenance middleware
This commit introduces several improvements and refactors:

- **Maintenance Middleware:** A new middleware `maintance.tsx` is added
  to the server, allowing for server restarts and displaying a "Service
  Unavailable" page to clients when maintenance mode is active. A new
  `/restart` endpoint is exposed to toggle maintenance mode.

- **Item Movement Logic:** The logic for moving items between containers
  has been refined.
  - The `heroRouter.ts` now correctly handles stacking of items by
    checking if the item already exists in the target container and if
    it's stackable.
  - `itemContainerService.obtainItem` has been renamed to `buyItem` to
    better reflect its purpose, and a new `obtainStackableItem` function
    has been introduced.
  - Item instance updates now correctly set the `ownerHeroId`.

- **API and Hook Cleanup:**
  - Minor cleanup in `get-user.ts` and `get-hero.ts` to remove unused
    code and improve readability.
  - Unused imports in `ItemContainer.tsx` and `ItemInstanceCard.tsx`
    have been removed.
  - `useDeleteContainerItem.ts` has been refactored to remove an unused
    hook.

- **Dependencies:** The `package.json` file has been updated.

- **TypeScript Configuration:** The `tsconfig.json` has been updated to
  correctly set `jsxImportSource` for Hono JSX.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,12 @@
 {
   "compilerOptions": {
     // Enable latest features
-    "lib": [
-      "ESNext"
-    ],
+    "lib": ["ESNext"],
     "target": "ESNext",
     "module": "ESNext",
     "moduleDetection": "force",
     "jsx": "react-jsx",
-    // "jsxImportSource": "hono/jsx",
+    "jsxImportSource": "hono/jsx",
     "allowJs": true,
     // Bundler mode
     "moduleResolution": "bundler",
@@ -26,6 +24,6 @@
     "paths": {
       "@/shared/*": ["./shared/*"],
       // "@/*": ["./server/*"]
-    }
-  }
+    },
+  },
 }
